crates/analyzer/tests/snapshots/errors__change_sign_and_size_in_cast.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: Casting between numeric values can change the sign or size but not both at once
  ┌─ [snippet]:4:20
  │
4 │   let y: u16 = u16(x)
  │                    ^ can not cast from `i8` to `u16` in a single step


